# openmind-mirror

./: AGENT.md  Cargo.toml  README.md
src/: calibration.rs  coherence.rs  lib.rs  mirror.rs  proprioceptor.rs  spectral.rs
